--- a/src/pages/css/Job.css
+++ b/src/pages/css/Job.css
@@ -244,6 +244,7 @@ ol li{
     font-weight: 700;
     list-style-type: circle;
     display: list-item;
+    margin-right: 8px;
 }
 
 .application-section .form-section > h3{
@@ -410,10 +411,17 @@ ol li{
     transition: 125ms background, 125ms color, 125ms box-shadow;
 }
 
+.application-section .tooltip-container:has(textarea){
+    min-height: 170px;
+}
+
 .application-section textarea {
-    min-height: 188px;
-    max-width: 100%;
+    width: 100%;
+    height: 150px;
+    min-height: 60px;
+    max-height: 300px;
     padding-top: 12px;
+    resize: vertical;
 }
 
 .application-section input::placeholder,
