--- a/src/pages/css/Job.css
+++ b/src/pages/css/Job.css
@@ -202,7 +202,6 @@ ol li{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     margin: 80px 10px 100px 10px;
     padding: 30px 20px;
     font-size: 0.9em;
@@ -676,3 +675,48 @@ ol li{
 }
 
 /*=====  End of Fields  ======*/
+
+.alert{
+    margin-top: 40px;
+    border-radius: 5px;
+    padding: 10px 15px 10px 15px;
+    background-color: #e2e3e5;
+    outline: 1.5px solid #d6d8db;
+    color: #383d41;
+}
+
+.alert.alert-green{
+    background-color: #d4edda;
+    outline-color: #c3e6cb;
+    color: #155724;
+}
+
+.alert.alert-orange{
+    background-color: #fff3cd;
+    outline-color: #ffeeba;
+    color: #856404;
+}
+
+.alert.alert-red{
+    background-color: #f8d7da;
+    outline-color: #f5c6cb;
+    color: #721c24;
+}
+
+.alert pre{
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+
+    word-wrap: break-word;
+    white-space: -moz-pre-wrap;
+    white-space: pre-wrap;
+}
+
+@media (width >= 400px){
+    .application-section{
+        align-items: center;
+    }
+}
