--- a/frontend/main_site/src/pages/css/Home.css
+++ b/frontend/main_site/src/pages/css/Home.css
@@ -1,39 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&display=swap');
 
 
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-body{
-    font-family: 'Cairo', sans-serif;
-    font-size: 17px;
-    font-weight: 500;
-    background: radial-gradient(circle, #ccd4da 40%, #ffffff 100%);
-    direction: rtl;
-}
-
-.root{
-    display: flex;
-    flex-direction: column;
-}
-
-.top{
-    display: flex;
-    height: fit-content;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.logo{
-    width: 220px;
-    height: auto;
-}
-
-main{
+.HOME{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,7 +9,7 @@ main{
     margin-top: 30px;
 }
 
-main .banner{
+.HOME .banner{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,7 +23,7 @@ main .banner{
     background-size: cover;
 }
 
-.banner::before{
+.HOME .banner::before{
     content: '';
     position: absolute;
     width: 100%;
@@ -63,30 +31,30 @@ main .banner{
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-.banner h2{
+.HOME .banner h2{
     color: #161616;
-    font-size: 2.8em;
-    font-weight: 800;
+    font-size: 2.4em;
+    font-weight: 700;
     margin: 150px 0 0 0;
 }
 
-.page-title{
+.HOME .page-title{
     margin-bottom: 20px;
     text-align: center;
     font-size: 1.5em;
 }
 
-.jobs{
+.HOME .jobs{
     margin: 0 40px 0 40px;
     direction: rtl;
 }
 
-.jobs-intro-text{
+.HOME .jobs-intro-text{
     margin-top: 20px;
     font-size: 1.2em;
 }
 
-.jobs-list{
+.HOME .jobs-list{
     display: flex;
     flex-flow: row wrap;
     height: fit-content;
@@ -96,7 +64,7 @@ main .banner{
     margin-top: 80px;
 }
 
-.job-item{
+.HOME .job-item{
     position: relative;
     width: 100%;
     max-width: 476px;
@@ -106,13 +74,14 @@ main .banner{
     direction: rtl;
     text-align: right;
     /* padding: 65px 20px 20px 14px; */
-    transition: 0.3s;
+    transition: 0.2s;
     text-overflow: clip;
     box-shadow: 0px 4px 32px rgb(0 0 0 / 10%);
     /* user-select: none; */
+    color: black;
 }
 
-.job-item a{
+.HOME .job-item a{
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -120,103 +89,111 @@ main .banner{
     height: 100%;
     padding: 65px 20px 20px 14px;
     /* user-select: none; */
-    color: black;
     text-decoration: none;
+    color: inherit
     /* pointer-events: none; */
 }
 
-.job-item a:active{
+.HOME .job-item a:active{
     background-color: #0f476d;
     color: #e5e5e5;
 }
 
 @media (hover: hover){
-    .job-item a:hover{
+    .HOME .job-item:hover{
         background-color: #0f476d;
         color: #e5e5e5;
     }
-    .job-item a:hover .icon-container{
+    .HOME .job-item:hover .icon-container{
         background-color: #8d8d8d;
     }
-    .job-item a:focus-visible:hover .icon-container{
+    .HOME .job-item:focus-visible:hover .icon-container{
         transition: none;
         outline: -webkit-focus-ring-color auto 1px;
     }
 
-    .job-item a:focus-visible:hover{
+    .HOME .job-item:focus-visible:hover{
         outline: -webkit-focus-ring-color auto 1px;
     }
 }
 
-.job-item a::selection{
+.HOME .job-item a::selection{
     color: yellow;
     background-color: yellow;
 }
 
 
-.job-item a:active .icon-container{
+.HOME .job-item a:active .icon-container{
     background-color: #8d8d8d;
 }
 
-.job-item a:focus-visible .icon-container{
+.HOME .job-item a:focus-visible .icon-container{
     transition: none;
     outline: #0f476d auto 1px;
 }
 
-.job-item a:focus-visible{
+.HOME .job-item a:focus-visible{
     outline: #0f476d auto 1px;
 }
 
-.job-item a:focus-visible:active .icon-container{
+.HOME .job-item a:focus-visible:active .icon-container{
     transition: none;
     outline: -webkit-focus-ring-color auto 1px;
 }
 
-.job-item a:focus-visible:active{
+.HOME .job-item a:focus-visible:active{
     outline: -webkit-focus-ring-color auto 1px;
 }
 
-.job-item .job-title{
+.HOME .job-item .job-title{
     font-size: 1.1em;
 }
 
-.job-item .job-desc{
-    font-size: 0.95em;
-    text-overflow: ellipsis;
+.HOME .job-item .job-desc{
     height: 130px;
+    margin: 0;
     overflow: hidden scroll;
     padding-left: 10px;
+
+    font-family: inherit;
+    font-size: 0.95em;
+    font-weight: inherit;
+    line-height: inherit;
+
+    word-wrap: break-word;
+    white-space: -moz-pre-wrap;
+    white-space: pre-wrap;
 }
 
-.job-desc::-webkit-scrollbar{
+.HOME .job-desc::-webkit-scrollbar{
     display: none;
 }
 
-.job-item:hover .job-desc::-webkit-scrollbar{
+.HOME .job-item:hover .job-desc::-webkit-scrollbar{
     display: initial;
     width: 5px;
 }
 
 
 
-.job-desc::-webkit-scrollbar-track{
+.HOME .job-desc::-webkit-scrollbar-track{
     margin-bottom: 20px;
     background-color: transparent;
 }
 
-.job-desc::-webkit-scrollbar-thumb{
+.HOME .job-desc::-webkit-scrollbar-thumb{
     border-radius: 3px;
 }
 
-.job-item:hover .job-desc::-webkit-scrollbar-thumb{
+.HOME .job-item:hover .job-desc::-webkit-scrollbar-thumb{
     background-color: #8d8d8d;
 }
 
-.job-item:hover .job-desc::-webkit-scrollbar-thumb:hover{
+.HOME .job-item:hover .job-desc::-webkit-scrollbar-thumb:hover{
     background-color: #aaaaaa;
 }
 
-.icon-container{
+.HOME .icon-container{
     position: absolute;
     display: flex;
     align-items: center;
@@ -234,7 +211,7 @@ main .banner{
     transition: 0.3s;
 }
 
-.job-item .icon-container .icon{
+.HOME .job-item .icon-container .icon{
     width: 60px;
     height: 60px;
     /* background-color: #0f476d; */
@@ -242,13 +219,13 @@ main .banner{
     color: #0f476d;
 }
 
-.job-item .icon-container img{
+.HOME .job-item .icon-container img{
     color: #0f476d;
 }
 
 
 @media (width >= 600px){
-    .jobs-list{
+    .HOME .jobs-list{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: max-content;
@@ -257,41 +234,41 @@ main .banner{
         row-gap: 70px;
     }
 
-    .job-item a{
+    .HOME .job-item a{
         width: 250px;
     }
 }
 
 @media (width >= 800px) and (width < 1000px){
-    .job-item a{
+    .HOME .job-item a{
         width: 350px;
     }
 }
 
 @media (width >= 1000px) and (width < 1550px){
-    .job-item a{
+    .HOME .job-item a{
         width: 440px;
     }
 }
 
 @media (width >= 1100px){
-    .jobs-list{
+    .HOME .jobs-list{
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .job-item a{
+    .HOME .job-item a{
         width: 320px;
     }
 }
 
 @media (width >= 1250px){
-    .job-item a{
+    .HOME .job-item a{
         width: 380px;
     }
 }
 
 @media (width >= 1550px){
-    .job-item a{
+    .HOME .job-item a{
         width: 440px;
     }
 }
