--- a/frontend/main_site/src/pages/css/Job.css
+++ b/frontend/main_site/src/pages/css/Job.css
@@ -1,42 +1,32 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+:root:has(.JOB){
+    --color: #2886b1;
 }
 
-p {
+.JOB p {
     margin-bottom: 1rem;
 }
 
-input{
+.JOB input{
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 600;
-    color: var(--bs-heading-color,inherit);
-}
-
-:root{
-    --color: #2886b1;
-}
-
-button {
+.JOB button {
     font-family: 'Cairo', sans-serif;
     font-size: 0.9em;
     font-weight: 600;
 }
 
-main {
+.JOB main {
     margin: 80px 10px 0 10px;
     padding: 20px 15px;
     direction: rtl;
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     background-color: white;
     border: 2px solid #bfc6cc;
@@ -45,18 +35,18 @@ main {
     box-shadow: 0px 4px 32px rgb(0 0 0 / 10%);
 }
 
-main .introduction {
+.JOB main .introduction {
     margin-bottom: 40px;
 }
 
-.job-info {
+.JOB .job-info {
     padding: 15px 25px;
     background-color: white;
     border-radius: 7px;
     box-shadow: 0px 4px 7px rgb(0 0 0 / 12%);
 }
 
-.job-info .job-info-top {
+.JOB .job-info .job-info-top {
     display: flex;
     color: #4e4e4e;
     align-items: center;
@@ -64,30 +54,30 @@ main .introduction {
     gap: 10vw;
 }
 
-.job-info .job-info-top h1{
+.JOB .job-info .job-info-top h1{
     font-size: 24px;
     font-weight: 600;
     text-align: center;
 
 }
 
-.job-info .job-info-top img {
+.JOB .job-info .job-info-top img {
     width: 60px;
     height: 60px;
     object-fit: cover;
 }
 
-.job-info .job-info-middle {
+.JOB .job-info .job-info-middle {
     margin: 15px 0 15px 0;
     font-size: 0.85em;
     color: #00161e75;
 }
 
-.job-status {
+.JOB .job-status {
     color: #4e4e4e;
 }
 
-.job-status span {
+.JOB .job-status span {
     font-size: 0.75em;
     font-weight: 600;
     display: inline-block;
@@ -97,15 +87,15 @@ main .introduction {
     text-align: center;
 }
 
-.job-status span.job-status-opened {
+.JOB .job-status span.job-status-opened {
     background-color: rgb(141, 255, 141);
 }
 
-.job-status span.job-status-closed {
+.JOB .job-status span.job-status-closed {
     background-color: rgb(255, 141, 141);
 }
 
-.apply-job-bg {
+.JOB .apply-job-bg {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -117,7 +107,7 @@ main .introduction {
     box-shadow: 0px 4px 7px rgb(0 0 0 / 12%);
 }
 
-.apply-job-bg .apply-job-btn {
+.JOB .apply-job-bg .apply-job-btn {
 
     margin-top: 20px;
 
@@ -138,7 +128,7 @@ main .introduction {
     transition: color 200ms ease-in-out;
 }
 
-.apply-job-bg .apply-job-btn::after {
+.JOB .apply-job-bg .apply-job-btn::after {
     content: '';
     position: absolute;
     display: block;
@@ -152,17 +142,17 @@ main .introduction {
     transition: width 200ms ease-in-out;
 }
 
-.apply-job-bg .apply-job-btn:hover,
-.apply-job-bg .apply-job-btn:focus {
+.JOB .apply-job-bg .apply-job-btn:hover,
+.JOB .apply-job-bg .apply-job-btn:focus {
     color: #fff;
     outline: 0;
 }
 
-.apply-job-bg .apply-job-btn:hover::after {
+.JOB .apply-job-bg .apply-job-btn:hover::after {
     width: 110%;
 }
 
-.details-list li {
+.JOB .details-list li {
     font-size: 0.9em;
     padding: 15px;
     align-items: center;
@@ -173,11 +163,11 @@ main .introduction {
     margin: 0 0 30px 0;
 }
 
-.details-list li::marker {
+.JOB .details-list li::marker {
     font-size: 1.15rem;
 }
 
-.details-list li h3 {
+.JOB .details-list li h3 {
     display: inline-block;
     font-size: 1.15rem;
     font-weight: 600;
@@ -185,20 +175,20 @@ main .introduction {
     color: black;
 }
 
-.details-list li *:not(h3) {
+.JOB .details-list li *:not(h3) {
     color: #4e4e4e;
 }
 
-ol {
+.JOB ol {
     padding: 0
 }
-ol li{
+.JOB ol li{
     padding: 0
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 
-.application-section {
+.JOB .application-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -212,15 +202,15 @@ ol li{
     box-shadow: 0px 4px 7px rgb(0 0 0 / 12%);
 }
 
-.application-section * {
+.JOB .application-section * {
     box-sizing: border-box;
 }
 
-.application-section label {
+.JOB .application-section label {
     display: block;
 }
 
-.application-section .form-section h3{
+.JOB .application-section .form-section h3{
     font-size: 1em;
     font-weight: 700;
     list-style-type: circle;
@@ -228,7 +218,7 @@ ol li{
     margin-right: 8px;
 }
 
-.application-section .form-section > h3{
+.JOB .application-section .form-section > h3{
     margin-bottom: 20px;
 }
 
@@ -240,26 +230,26 @@ ol li{
     display: list-item;
 } */
 
-.application-section .form-section{
+.JOB .application-section .form-section{
     margin-bottom: 50px;
 }
 
-.application-section div .add-item{
+.JOB .application-section div .add-item{
     display: inline-block;
 }
 
-.application-section div h3{
+.JOB .application-section div h3{
     margin: 0;
 }
 
-.application-section div:has(> .add-item){
+.JOB .application-section div:has(> .add-item){
     display: flex;
     height: 40px;
     align-items: center;
     justify-content: space-between;
 }
 
-.application-section div > .add-item{
+.JOB .application-section div > .add-item{
     background: transparent;
     border-radius: 50%;
     width: 40px;
@@ -268,12 +258,12 @@ ol li{
     justify-content: center;
     align-items: center;
 }
-.application-section div > .add-item:has(.add-item-btn:hover) {
+.JOB .application-section div > .add-item:has(.add-item-btn:hover) {
     background-color: #d6d6d675;
 
 }
 
-.application-section div > .add-item > .add-item-btn{
+.JOB .application-section div > .add-item > .add-item-btn{
     background-color: transparent;
     background-image: url(../imgs/add.png);
     border-radius: 50%;
@@ -286,32 +276,32 @@ ol li{
     background-size: cover;
 }
 
-.form-block{
+.JOB .form-block{
     transition: 0.7ms;
 }
 
 
-.form-block:last-child:has(.tooltip-container .tooltip-below),
-.form-block:not(:last-child){
+.JOB .form-block:last-child:has(.tooltip-container .tooltip-below),
+.JOB .form-block:not(:last-child){
     margin-bottom: 25px;
 }
 
-.form-block.tight:not(:last-child){
+.JOB .form-block.tight:not(:last-child){
     margin-bottom: 10px;
 }
 
-.form-block:not(:last-child):has(.tooltip-container .tooltip-below){
+.JOB .form-block:not(:last-child):has(.tooltip-container .tooltip-below){
     margin-bottom: 70px;
 }
 
-.form-block:has(.course-item, .experience-item){
+.JOB .form-block:has(.course-item, .experience-item){
     border-right: 4px solid #3d3d3d6c;
     border-radius: 3px;
     padding-right: 15px;
 }
 
-.course-item,
-.experience-item {
+.JOB .course-item,
+.JOB .experience-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -320,28 +310,28 @@ ol li{
     line-height: 30px;
 }
 
-:is(.course-item, .experience-item):not(:last-child){
+:is(.JOB .course-item, .JOB .experience-item):not(:last-child){
     border-bottom: 1px solid #acacac;
     padding-bottom: 15px;
 }
 
-:is(.course-item, .experience-item) p{
+:is(.JOB .course-item, .JOB .experience-item) .JOB p{
     display: inline-block;
     margin: 0;
 }
 
-:is(.course-item, .experience-item) .item-info{
+:is(.JOB .course-item, .JOB .experience-item) .JOB .item-info{
     margin-right: 8px;
     margin-bottom: 8px;
     padding-left: 10px;
 }
 
-:is(.course-item, .experience-item) .controls{
+:is(.JOB .course-item, .JOB .experience-item) .JOB .controls{
     border-right: 1px solid black;
     padding-right: 5px;
 }
 
-:is(.course-item, .experience-item) .delete-item{
+:is(.JOB .course-item, .JOB .experience-item) .JOB .delete-item{
     background: transparent;
     border-radius: 50%;
     width: 40px;
@@ -351,15 +341,15 @@ ol li{
     align-items: center;
 }
 
-:is(.course-item, .experience-item) .delete-item:has(.delete-item-btn:hover){
+:is(.JOB .course-item, .JOB .experience-item) .JOB .delete-item:has(.delete-item-btn:hover){
     background-color: #ff9f9f75;
 }
 
-:is(.course-item, .experience-item) .delete-item:has(.delete-item-btn:active){
+:is(.JOB .course-item, .JOB .experience-item) .JOB .delete-item:has(.delete-item-btn:active){
     background-color: #ff9f9f96;
 }
 
-:is(.course-item, .experience-item) .delete-item .delete-item-btn{
+:is(.JOB .course-item, .JOB .experience-item) .JOB .delete-item .delete-item-btn{
     background-color: transparent;
     background-image: url(../imgs/delete.png);
     border-radius: 50%;
@@ -376,11 +366,11 @@ ol li{
     =            Fields           =
     =============================================*/
 
-.application-section .tooltip-container:has(textarea){
+.JOB .application-section .tooltip-container:has(textarea){
     min-height: 170px;
 }
 
-.application-section textarea {
+.JOB .application-section textarea {
     width: 100%;
     height: 150px;
     min-height: 60px;
@@ -389,34 +379,34 @@ ol li{
     resize: vertical;
 }
 
-.application-section .radio-choice{
+.JOB .application-section .radio-choice{
     direction: rtl;
     display: inline-block;
     margin-left: 25%;
 }
 
-.application-section .radio-choice > *{
+.JOB .application-section .radio-choice > *{
     display: inline-block;
     height: 15px;
 }
 
-.application-section .radio-choice input{
+.JOB .application-section .radio-choice input{
     width: 15px;
     margin-left: 15px;
 }
 
-.application-section .course-save-btn,
-.application-section .course-cancel-btn,
-.application-section .experience-save-btn,
-.application-section .experience-cancel-btn
+.JOB .application-section .course-save-btn,
+.JOB .application-section .course-cancel-btn,
+.JOB .application-section .experience-save-btn,
+.JOB .application-section .experience-cancel-btn
 {
     margin-top: 20px;
     width: 35%;
     max-width: 120px;
 }
 
-.application-section .course-cancel-btn,
-.application-section .experience-cancel-btn
+.JOB .application-section .course-cancel-btn,
+.JOB .application-section .experience-cancel-btn
 {
     display: inline-block;
     margin-right: 20px;
@@ -425,7 +415,7 @@ ol li{
 /*=====  End of Fields  ======*/
 
 @media (width >= 400px){
-    .application-section{
+    .JOB .application-section{
         align-items: center;
     }
 }
