--- a/frontend/main_site/src/pages/css/Home.css
+++ b/frontend/main_site/src/pages/css/Home.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&display=swap');
-
 
 .HOME{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin: 30px 0 100px 0;
 }
 
 .HOME .banner{
@@ -14,10 +12,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 300px;
 
-    background-image: url(../imgs/banner.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -199,7 +196,7 @@
     align-items: center;
     justify-content: center;
     top: -40px;
-    right: 40px;
+    right: 11.42%;
     width: 90px;
     height: 90px;
     background-color: #ffffff;
@@ -207,8 +204,9 @@
     -webkit-box-pack: center;
     border: none;
     border-radius: 6px 6px 32px 6px;
-    box-shadow: 0px 4px 32px rgb(0 0 0 / 10%);
+    box-shadow: 0px 0px 24px rgb(0 0 0 / 20%);
     transition: 0.3s;
+    font-size: 0.9em;
 }
 
 .HOME .job-item .icon-container .icon{
