--- a/frontend/admin_site/src/pages/css/Home.css
+++ b/frontend/admin_site/src/pages/css/Home.css
@@ -58,8 +58,56 @@ html:has(body .Home), body:has(.Home){
     text-align: right;
 }
 
-.Home .controls *{
+.Home .controls > *{
     max-width: 300px;
+}
+
+.Home .controls div:has(.search-container){
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 400px;
+}
+
+.Home .controls .search-container{
+    position: relative;
+
+}
+
+.Home .controls #search-submissions{
+    width: 300px;
+    padding-right: 45px;
+    margin: 0;
+    direction: rtl;
+    font-family: inherit;
+    font-size: 0.9rem;
+    font-weight: inherit;
+    line-height: inherit;
+    width: 400px;
+}
+
+.Home .controls #search-btn{
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 35px;
+    height: 35px;
+    background-size: 20px 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.Home .controls #search-btn:hover{
+    border-radius: 50%;
+    background-color: #375a7218;
+}
+
+.Home .controls #search-btn:active{
+    border-radius: 50%;
+    background-color: #375a7221;
 }
 
 .Home .submissions-info{
